--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,18 +13,17 @@
 <a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/23/n13042124.md#1" title="武毒所爆丑闻 急删中共军方和国际专家信息""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/06/id13023672-wuhan-lab-700x420-320x200.jpeg">&nbsp;</a>
 <a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/23/n13041887.md#1" title="学生仿革命手段维权 内部文件泄中共恐慌""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/06/id13041895-000_1UR3TM-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/kjkhhx387/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://kjkhhx387.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>15分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/24/n13044092.md#1">网曝央美教师诱骗16岁女生 校方撇清关系</a><br>
-:clock8: <em>43分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/24/n13044038.md#1">中方要求美NIH删除基因数据 疑掩盖病毒起源</a><br>
-:clock8: <em>56分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/24/n13043501.md#1">传大陆多城停二手房贷 学者：调控手段已用尽</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/24/n13044023.md#1">中共百年内部分裂 三十多人组建毛派新党被抓</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/24/n13044013.md#1">陈零九赠医疗物资回馈前线 感谢染疫期间照顾</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/24/n13043954.md#1">《变形金刚：万兽崛起》柯博文、大黄蜂回归</a><br>
+:clock8: <em>23分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/24/n13044254.md#1">日本小学生意外跟野熊道早安 熊被吓跑了</a><br>
+:clock8: <em>35分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/24/n13043786.md#1">东莞病例染Delta变异株 麻涌镇再全员检测</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/24/n13044092.md#1">网曝央美教师诱骗16岁女生 校方撇清关系</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/24/n13044038.md#1">中方要求美NIH删除基因数据 疑掩盖病毒起源</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/24/n13043501.md#1">传大陆多城停二手房贷 学者：调控手段已用尽</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/24/n13044023.md#1">中共百年内部分裂 三十多人组建毛派新党被抓</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/22/n13039711.md#1">匈牙利候选人致信习近平：若当选将阻中国项目</a><br>
 <a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/22/n13039685.md#1">大陆教授用马克思理论推翻相对论 舆论哗然</a><br>
 <a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/23/n13040436.md#1">美第七舰队驱逐舰穿越台湾海峡 中共又气炸</a><br>
 <a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/22/n13038305.md#1">【拍案惊奇】比特币成中共死敌 谁放料董外逃？</a><br>
-<a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/22/n13038555.md#1">卸任驻美大使 崔天凯发辞别信称将回国</a><br>
 <a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/22/n13039101.md#1">女儿遭轮奸险被灭口8年不立案 母伸冤被刑拘</a><br>
 <a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/23/n13040878.md#1">【翻墙必看】分析：崔天凯辞别信揭中共老底</a><br>
 <a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/22/n13039747.md#1">宁波打桩机砸中轿车两死 死者传为名企老总</a><br>
@@ -40,17 +39,16 @@
 <a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/23/n13043091.md#1">【新闻看点】中国疫苗爆无效 董经纬事件美发话</a><br>
 <a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/23/n13042718.md#1">中共搬叛党者遭灭门案示警 蔡霞：山雨欲来</a><br>
 <a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/23/n13042775.md#1">董经纬投诚？美官员罕见否认此敏感话题</a><br>
-<a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/23/n13042778.md#1">七一临近 中共为保百年庆不惜血本严控民众</a><br>
 <a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/24/n13043759.md#1">黑龙江出现大洪水 民众：没见过这么大的水</a><br>
+<a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/23/n13042778.md#1">七一临近 中共为保百年庆不惜血本严控民众</a><br>
 <a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/22/n13038913.md#1">“工龄归零”逼上绝路 川男社保局割腹自杀</a><br>
 <a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/23/n13042253.md#1">体制内敢言学者辛子陵因病去世 微信封讣告</a><br>
 <a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/3/n12997170.md#1">【独家】全民遭谎言洗脑 有多少真正跟随</a><br>
 <a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/24/n13043497.md#1">【翻墙必看】叛逃者不是董经纬？</a><br>
-<a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/23/n13042826.md#1">北京风声鹤唳 网传数千军人进驻鸟巢</a><br>
 <a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/23/n13043066.md#1">湖北前省长王晓东转任政协闲职 命运引猜测</a><br>
+<a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/23/n13043105.md#1">【秦鹏直播】赵立坚曾甩锅武汉军运 美国会调查</a><br>
 <a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/23/n13042511.md#1">焦煤告急 价格猛涨 网爆首钢求援函</a><br>
 <a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/23/n13041685.md#1">深圳4名法轮功学员被非法关押 境况不明</a><br>
-<a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/23/n13043105.md#1">【秦鹏直播】赵立坚曾甩锅武汉军运 美国会调查</a><br>
 <a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/23/n13042425.md#1">【财商天下】大量粮食靠进口 中国耕地却抛荒？</a><br>
 <a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/23/n13043049.md#1">【远见快评】达萨克猛料曝光 苹果终局背后玄机？</a><br>
 <a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/23/n13043076.md#1">【时事纵横】中共7.1露怯 逾二百军巴塞爆鸟巢</a><br>
@@ -98,14 +96,14 @@
 <a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/21/n13035671.md#1">五香港青年驾船到台湾 美政府介入后抵美</a><br>
 <a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/20/n13035474.md#1">林俊杰父亲节晒旧照 被发现招牌浏海是遗传</a><br>
 <br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/szzdlab/vdtzrs/raw/master/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://gitlab.com/szzdlab/vdC1WZ_mj/raw/master/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://114.47.99.179/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 42,385</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://D site IP/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 42,385</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 379,413,102 人
+!共 379,415,249 人
 ```
-</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13042928.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13043032-jf3FotoJet-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13042928.md#1">玖富受害者绑铁链江西省府前维权 多人被抓</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/24/n13043308.md#1">传美将禁止进口新疆产的部分太阳能产品</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13041130.md#1">北京倪玉兰遭黑社会骚扰 丈夫被殴打</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13037607.md#1">“血艾”致二级残疾 江苏陆晓忠再被看管</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13038297.md#1">关注中共对新疆香港迫害 联合国官员盼访新疆</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13035705.md#1">吉林警察入室绑架访民 河北官员火车站打人</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/24/n13043501.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2019/10/GettyImages-158544556-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/24/n13043501.md#1">传大陆多城停二手房贷 学者：调控手段已用尽</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/24/n13043310.md#1">中国CPI涨幅因猪肉下降 大宗商品涨价潮向下游蔓延</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/24/n13043283.md#1">大陆猪价连跌5个月  猪企5月亏损面达9.7%</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13042754.md#1">中国“芯荒”加剧 部分芯片价格飙涨5倍</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13042676.md#1">中国白酒股突然暴跌 市值蒸发近1500亿</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13042606.md#1">全球粮价上涨40% 中国粮食需求推高国际粮价</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/24/n13043528.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13043595-210623164227100311-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/24/n13043528.md#1">香港苹果日报关门 美欧谴责中共扼杀言论自由</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/24/n13043613.md#1">崔天凯敏感时刻离任 “拜习会”添变数</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/24/n13043435.md#1">赵立坚为中共瞒疫推责 推文搞错事实闹笑话</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13042700.md#1">孔子学院侵蚀学术自由 荷兰教育大臣吁取消</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13042441.md#1">消息：蚂蚁集团拟交出数据库 跟国企谈合作</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13042415.md#1">拜登政府被爆跟中方接触 讨论拜习会</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/24/n13043493.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13043866-earthquake-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/24/n13043493.md#1">大陆4省今日发生地震 河北一周5次</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/24/n13043396.md#1">云南车祸6死1伤 事发6天后才被公布</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13041132.md#1">大陆近期频发地震 四川绵阳发生3.8级地震</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040876.md#1">因降雨内蒙学校四百余人被困 嫩江现编号洪水</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039743.md#1">中国多地暴雨频发 黑龙江现50年一遇洪水</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039352.md#1">打疫苗抽奖送电动车 中共鼓励接种奇招百出</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/24/n13044092.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13044224-006044Pfly1grsiyifdtxj31400u0dlo-320x200.jpeg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/24/n13044092.md#1">网曝央美教师诱骗16岁女生 校方撇清关系</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/24/n13044023.md#1">中共百年内部分裂 三十多人组建毛派新党被抓</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/24/n13043439.md#1">三退声明精选（2021/06/23）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13042921.md#1">被节目测体重仅45公斤 杨颖惊人饭量引热议</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13041327.md#1">七一前 四川一男子自制炸弹称要引爆被击毙</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039971.md#1">孙杨8年禁赛减为4年3个月 将无缘东京奥运</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039676.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13039721-000_98G3TW-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039676.md#1">中共阻调查武毒所 卢比奥提法案制裁中科院</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13037294.md#1">电信诈骗侵袭大陆校园 一年卷走学生数十亿</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/17/n13029496.md#1">双料港姐邓卓殷完成建筑专业硕士课程</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/17/n13029029.md#1">【财商天下】土猪拱白菜 励志还是可怕？</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/17/n13028061.md#1">大陆翻译家许渊冲去世 终年100岁</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/16/n13027003.md#1">吴尊爸爸75岁生日 冻龄外表与儿子像兄弟</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
+</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13042928.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13043032-jf3FotoJet-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13042928.md#1">玖富受害者绑铁链江西省府前维权 多人被抓</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/24/n13043308.md#1">传美将禁止进口新疆产的部分太阳能产品</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13041130.md#1">北京倪玉兰遭黑社会骚扰 丈夫被殴打</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13037607.md#1">“血艾”致二级残疾 江苏陆晓忠再被看管</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13038297.md#1">关注中共对新疆香港迫害 联合国官员盼访新疆</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13035705.md#1">吉林警察入室绑架访民 河北官员火车站打人</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/24/n13043501.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2019/10/GettyImages-158544556-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/24/n13043501.md#1">传大陆多城停二手房贷 学者：调控手段已用尽</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/24/n13043310.md#1">中国CPI涨幅因猪肉下降 大宗商品涨价潮向下游蔓延</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/24/n13043283.md#1">大陆猪价连跌5个月  猪企5月亏损面达9.7%</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13042754.md#1">中国“芯荒”加剧 部分芯片价格飙涨5倍</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13042676.md#1">中国白酒股突然暴跌 市值蒸发近1500亿</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13042606.md#1">全球粮价上涨40% 中国粮食需求推高国际粮价</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/24/n13043528.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13043595-210623164227100311-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/24/n13043528.md#1">香港苹果日报关门 美欧谴责中共扼杀言论自由</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/24/n13043613.md#1">崔天凯敏感时刻离任 “拜习会”添变数</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/24/n13043435.md#1">赵立坚为中共瞒疫推责 推文搞错事实闹笑话</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13042826.md#1">北京风声鹤唳 网传数千军人进驻鸟巢</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13042700.md#1">孔子学院侵蚀学术自由 荷兰教育大臣吁取消</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13042441.md#1">消息：蚂蚁集团拟交出数据库 跟国企谈合作</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/24/n13043786.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13035594-3e7ac0c29ac4e0b20f32a636be330a8c-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/24/n13043786.md#1">东莞病例染Delta变异株 麻涌镇再全员检测</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/24/n13043493.md#1">大陆4省今日发生地震 河北一周5次</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/24/n13043396.md#1">云南车祸6死1伤 事发6天后才被公布</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13041132.md#1">大陆近期频发地震 四川绵阳发生3.8级地震</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040876.md#1">因降雨内蒙学校四百余人被困 嫩江现编号洪水</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039743.md#1">中国多地暴雨频发 黑龙江现50年一遇洪水</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/24/n13044092.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13044224-006044Pfly1grsiyifdtxj31400u0dlo-320x200.jpeg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/24/n13044092.md#1">网曝央美教师诱骗16岁女生 校方撇清关系</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/24/n13044023.md#1">中共百年内部分裂 三十多人组建毛派新党被抓</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/24/n13043439.md#1">三退声明精选（2021/06/23）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13042921.md#1">被节目测体重仅45公斤 杨颖惊人饭量引热议</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13041327.md#1">七一前 四川一男子自制炸弹称要引爆被击毙</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039971.md#1">孙杨8年禁赛减为4年3个月 将无缘东京奥运</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039676.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13039721-000_98G3TW-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039676.md#1">中共阻调查武毒所 卢比奥提法案制裁中科院</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13037294.md#1">电信诈骗侵袭大陆校园 一年卷走学生数十亿</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/17/n13029496.md#1">双料港姐邓卓殷完成建筑专业硕士课程</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/17/n13029029.md#1">【财商天下】土猪拱白菜 励志还是可怕？</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/17/n13028061.md#1">大陆翻译家许渊冲去世 终年100岁</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/16/n13027003.md#1">吴尊爸爸75岁生日 冻龄外表与儿子像兄弟</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/10/n13014000.md#1">【独家】法治还是人治？ 文件曝中共谎言</a><br>
 <a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/6/8/n13008518.md#1">【独家】中共用“学习”洗脑 民众无声抵抗</a><br>
 <a href="https://github.com/kjkhhx387/djy/blob/master/gb/21/5/4/n12924622.md#1">【独家】起底中共高层力捧的广西柳工</a><br>
